# rs.core

./: Cargo.toml  dbshell.sh  docker-compose.yml  migrate.sh  rainfrog.sh
authserver/: Cargo.toml
authserver/src/: auth.rs  lib.rs  main.rs
authserver/src/utils/: add_account.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs  opcodes.rs  warden.rs
garbage/: ac.auth.debug.txt
migrations/: 20240930014206_initial.sql
proto/: Cargo.toml
proto/src/: lib.rs  opcodes.rs
worldserver/: Cargo.toml
worldserver/src/: main.rs
