[package]
name = "authserver"
version = "0.1.0"
edition = "2021"
default-run = "authserver"

[dependencies]
tokio = { version="1", features=["full"] }
client = { path="../client" }
rand = { version = "0.8.5", features = ["min_const_gen"] }
zerocopy = { version = "0", features = ["byteorder", "derive"] }
tokio-postgres = "0"
deadpool-postgres = "0"
num-bigint = "0"
clap = { version = "4", features = ["derive"] }
num-traits = "0.2.19"

[[bin]]
path = "src/utils/add_account.rs"
name = "add_account"

[[bin]]
path = "src/main.rs"
name = "authserver"
