[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = "0"
crypto-bigint = "0"
hmac = "0"
lazy_static = "1"
nohash-hasher = "0"
num-bigint = "0"
num-traits = "0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rc4 = "0"
sha1 = "0"
tokio = { version = "1", features = ["rt", "macros"] }
zerocopy = { version = "0", features = ["byteorder", "derive"] }

[[bin]]
name = "client"
path = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"
