[package]
name = "wow_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = "0"
crypto-bigint = "0"
sha1 = "0"
hmac = "0"
rc4 = "0"
tokio = { version = "1" }
nohash-hasher = "0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
zerocopy = { version = "0.8", features = ["derive"] }
num-bigint = "0"
num-traits = "0"
